Fix search results on mobile

--- a/client/src/app/search/search.component.scss
+++ b/client/src/app/search/search.component.scss
@@ -23,6 +23,7 @@
       }
 
       .results-filter-button {
+        cursor: pointer;
 
         .icon.icon-filter {
           @include icon(20px);
@@ -133,7 +134,7 @@
 
 @media screen and (max-width: 800px) {
   .search-result {
-    margin: 20px 10px;
+    padding: 20px 10px;
   }
 
   .results-header {
